--- a/hey.html
+++ b/hey.html
@@ -11,10 +11,10 @@
             <table>
                 <thead>
                     <tr>
-                        <th>
+                        <th class="first">
                             1
                         </th>
-                        <th>
+                        <th class="second">
                             2
                         </th>
                     </tr>
